--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chat - node.js + socket.io</title>
-
-    <link href="css/main.css" rel="stylesheet">  
+    <link href="css/main.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
-        <h1>Chat</h1>
-    </div>
+        <h1>Chat <small>node.js + socket.io</small></h1>
 
+        <form class="nickname-form form-inline jumbotron">
+            <div class="form-group">
+                <label for="nickname" class="sr-only">Enter nickname:</label>
+                <input type="text" class="form-control nickname-input" id="nickname" placeholder="Your nickname">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+
+        <div class="chat-wrapper jumbotron hide">
+            <div class="row">
+                <div class="col-md-8">
+                    <div id="chat"></div>
+                </div>
+                <div class="col-md-4">
+                    <div id="users"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <form id="send-message">
+                        <div class="col-md-8">
+                            <input type="text" class="form-control" id="message" placeholder="Type message">
+                        </div>
+                        <div class="col-md-4">
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
