--- a/src/index.html
+++ b/src/index.html
@@ -23,19 +23,20 @@
         </form>
 
         <div class="chat-wrapper jumbotron hide">
+            <a href="#" class="btn btn-default logout-btn">Logout</a>
             <div class="row">
                 <div class="col-md-8">
-                    <div id="chat"></div>
+                    <ul class="chat-list"></ul>
                 </div>
                 <div class="col-md-4">
-                    <div id="users"></div>
+                    <ul class="users-list"></ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <form id="send-message">
+                    <form class="send-message-form">
                         <div class="col-md-8">
-                            <input type="text" class="form-control" id="message" placeholder="Type message">
+                            <input type="text" class="form-control message-input" id="message" placeholder="Type message">
                         </div>
                         <div class="col-md-4">
                             <button type="submit" class="btn btn-default">Submit</button>
