--- a/src/index.html
+++ b/src/index.html
@@ -15,31 +15,33 @@
         <h1>Chat <small>node.js + socket.io</small></h1>
 
         <form class="nickname-form form-inline jumbotron">
-            <div class="form-group">
-                <label for="nickname" class="sr-only">Enter nickname:</label>
+            <div class="input-group">
                 <input type="text" class="form-control nickname-input" id="nickname" placeholder="Your nickname">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+                <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default">Login</button>
+                </div>
+            </div>            
         </form>
 
         <div class="chat-wrapper jumbotron hide">
-            <a href="#" class="btn btn-default logout-btn">Logout</a>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-9">
                     <ul class="chat-list"></ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <ul class="users-list"></ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <form class="send-message-form">
-                        <div class="col-md-8">
+                        <div class="input-group">
                             <input type="text" class="form-control message-input" id="message" placeholder="Type message">
-                        </div>
-                        <div class="col-md-4">
-                            <button type="submit" class="btn btn-default">Submit</button>
+                            <div class="input-group-btn">
+                                <button type="submit" class="btn btn-default">Submit</button>
+                                <button type="button" class="btn btn-default edit-btn">Edit name</button>
+                                <button type="button" class="btn btn-default logout-btn">Logout</button>
+                            </div>
                         </div>
                     </form>
                 </div>
