--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
                 <div class="input-group-btn">
                     <button type="submit" class="btn btn-default">Login</button>
                 </div>
-            </div>            
+            </div>
+            <span class="help-block error"></span>
         </form>
 
         <div class="chat-wrapper jumbotron hide">
@@ -39,7 +40,7 @@
                             <input type="text" class="form-control message-input" id="message" placeholder="Type message">
                             <div class="input-group-btn">
                                 <button type="submit" class="btn btn-default">Submit</button>
-                                <button type="button" class="btn btn-default edit-btn">Edit name</button>
+                                <button type="button" class="btn btn-default edit-btn" data-toggle="modal" data-target="#editModal">Edit name</button>
                                 <button type="button" class="btn btn-default logout-btn">Logout</button>
                             </div>
                         </div>
@@ -48,7 +49,32 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="editModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Edit nickname</h4>
+                </div>
+                <form class="edit-nickname-form">
+                    <div class="modal-body">                    
+                        <input type="text" class="form-control edit-nickname-input" id="new-nickname" placeholder="Your new nickname">
+                        <span class="help-block edit-nickname-error"></span>                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary edit-nickname-btn">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
